# const-test

./: .gitignore  README.org  const-test.cabal
cbits/: const-and-func.c  const-and-func.h  just-a-const.c  just-a-const.h  test.c  test.h
lib/ConstTest/: MartinTest.hs
src/: Main.hs
