cabal-version:       2.2
name:                const-test
version:             0.0.1
category:            Foreign
build-type:          Simple

common common-options
  default-language:    Haskell2010
  build-depends:       base                 >= 4.11   && < 5
  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wnoncanonical-monad-instances
                       -Wredundant-constraints
                       -Wcpp-undef
                       -Werror=missing-home-modules
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wpartial-fields
                       -fhide-source-paths

executable const-test
  import:              common-options
  main-is:             Main.hs
  hs-source-dirs:      src
  default-extensions:  CApiFFI
                     , ForeignFunctionInterface
                     , LambdaCase
                     , StrictData
  other-extensions:    CPP
                     , DeriveGeneric
                     , GeneralizedNewtypeDeriving
                     , PatternSynonyms
  c-sources:           cbits/test.c
                     , cbits/const-and-func.c
                     , cbits/just-a-const.c
  include-dirs:        cbits
  includes:            test.h
                     , cbits/const-and-func.h
                     , cbits/just-a-const.c

  cc-options:          -v -v
  ghc-options:         -v
